feat: adding a way to find out from witch class should apply de refactoring and fixing the refactoring to make it in memory